[ITB-1905] Allow community and Test Bed administrators to explicitly define extension test services